[package]
name = "rsocket-proto"
version = "0.1.0"
description = "RSocket Protocol Implementation"
keywords = ["rsocket", "net", "protocol"]
edition = "2021"
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
repository = "https://github.com/real-evolution/rsocket-proto"
license-file = "LICENSE"
readme = true
publish = true

[dependencies]
bitflags = { version = "2" }
derive_more = { version = "0" }
nom = { version = "7" }
thiserror = { version = "1" }
